parameter einen hash und einen string nimmt, und zurueckgibt, ob der
string als key in dem hash drin ist. dadurch wird ifdefkey unnoetig
und fliegt raus. mit anderen worten: was frueher so war

  %ifdefkey(%hash,%key,heinz,deinz)

wird jetzt

  %if(%hcontains(%hash,%key),heinz,deinz)

** bound und ifdef

gleiches schicksal erleidet ifdef. das makro bound gibt zurueck, ob im
aktuellen environment der angegebene name gebunden ist. in anderen
worten: was einmal

  %ifdef(%name,heinz,deinz)

wird jetzt

  %if(%bound(%name),heinz,deinz)

* schani, 14.4.1998, nachmittag

** sgsub

sgsub hat jetzt einen optionalen vierten parameter, der ein
optionsstring ist.  im moment gibts nur eine option, naemlich 'i', was
soviel heisst wie case-insensitive match.

  %sgsub(it,SHIT on It!,%lambda(r,*%r[0]*),i)

evaluated zu

  SH*IT* on *It*!

* schani, 30.4.1998, nachmittag

** cvs

cvs tut laufen. zumindest behauptet das der murman. man muss sich
einloggen mit

	cvs login

wobei CVSROOT gesetzt ist auf

	:pserver:heinz@mondoshawan.ml.org:/cvshome/chpp

dann

	cvs checkout

den rest im cvs manual lesen.

* murman, 4.5.1998, nachm aufstehen aber vorm schlafengehn

** fopen, fpipe

bei fopen gibts jetz auch mode a - damit man was anhaengen kann an a
file fpipe hat vorn an neuen parameter, der bestimmt obs a reading
oder a writing pipe is:

  %fpipe(r, /bin/sh, -c, ls)
  %fpipe(w, /usr/sbin/sendmail,philipp)

damit is der chpp scho viel mehr cgi-tauglich...

* schani, 6.5.1998, vorm aufstehen aber nachm schlafengehn :-)

** priorities

ich hab im TODO file meine prioritaeten fuer die naechsten aenderungen
am chpp zusammengschrieben. wenn noch wem was einfaellt, moege er das
auch reinschreim. als ich mir dann die prioritaeten so ansah, hab ich
beschlossen, ein paar wochen (naja, vielleicht auch nur ein paar tage)
chpp abstinenz zu machen, weil mein lieblingspunkt (chpp schneller
machen) kommt leider erst an vierten stelle :-(.