@@ -1679,3 +1679,9 @@ auch reinschreim. als ich mir dann die prioritaeten so ansah, hab ich
 beschlossen, ein paar wochen (naja, vielleicht auch nur ein paar tage)
 chpp abstinenz zu machen, weil mein lieblingspunkt (chpp schneller
 machen) kommt leider erst an vierten stelle :-(.
+
+* schani, 14.5.1998, nachmittag
+
+** fgetwd und fchdir
+
+sind hoffe ich selbsterklaerend.
